changed homepage url

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prakticky_test",
   "private": true,
-  "homepage": "https://Bengor0.github.io/Bengor0",
+  "homepage": "https://Bengor0.github.io/google-scraper",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
